--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,25 +11,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Check out the repository's code.
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2. Setup Node.js environment (use the version your project requires).
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
 
-      # 3. Install dependencies using npm ci for a clean, reproducible install.
       - name: Install dependencies
         run: npm ci
 
-      # 4. Build the Astro project.
       - name: Build Astro site
         run: npm run build
 
-      # 5. Deploy the generated static files from the dist folder to the gh-pages branch.
+      - name: Copy CNAME file
+        run: |
+          if [ -f CNAME ]; then
+            cp CNAME dist/
+            echo "CNAME file copied to dist directory"
+          else
+            echo "CNAME file not found in the root directory, skipping copy."
+          fi
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
