--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.2.0",
-    "@astrojs/tailwind": "^6.0.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/vite": "^4.0.6",
     "astro": "^5.2.5",
-    "prismjs": "^1.29.0"
+    "prismjs": "^1.29.0",
+    "tailwindcss": "^4.0.6"
   }
 }
