--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.2.0",
+    "@astrojs/svelte": "^7.0.4",
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.0.6",
     "astro": "^5.2.5",
-    "tailwindcss": "^4.0.6"
+    "svelte": "^5.19.10",
+    "tailwindcss": "^4.0.6",
+    "typescript": "^5.7.3"
   }
 }
